release 1.1.0-ea (2009-05)
- Support a base path from which root resource classes are matchd when
  using the Grizzly adapter. The base path may be set as follows:

    ResourceConfig rc = ...
    Adapter a = ContainerFactory.createContainer(Adapter.class, rc);
    (GrizzlyAdapter)adapter).setResourcesContextPath("/basePath");

  By default the base path is "/".
- Integrated JSR 311 API 1.1-SNAPSHOT
  - Require support for static fromString method in addition to existing valueOf
    method for types used as parameters in resource methods. For backwards
    compatibility, where both methods exist, valueOf will take precedence except
    for Enums where the precedence is reversed since every enum defines an
    implicit valueOf method that cannot be overridden.
  - Support Request.evaluatePreconditions() which is to be called when a
    resource does not exist. If the "If-Match" header is present with
    one or more entities, or is "*" then a 412 response will be returned
    otherwise null will be returned.
    This is primarily of use for implementations of PUT.
  - Unify the the value of @Consumes and @Produces as follows:

        /**
         * A list of media types. Each entry may specify a single type or consist
         * of a comma separated list of types. E.g. {"image/jpeg,image/gif",
         * "image/png"}. Use of the comma-separated form allows definition of a
         * common string constant for use on multiple targets.
         */
        String[] value() default "*/*";
  - Add a secondary key to the sort order used when looking for compatible
    MessageBodyWriters such that writers whose declared generic type is closer
    in terms of inheritance are sorted earlier than those whose declared generic
    type is further.

release 1.0.3 (2009-04-15)
- Fixed issue 163
  https://jersey.dev.java.net/issues/show_bug.cgi?id=163
  Guice integration is supported with the jersey-guice module.
- Fixed issue 245